# app-store-reviews-viewer-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
app/: config.py  main.py
app/api/: adapter.py  app.py  routes.py  schemas.py
app/common/: adapter.py  base_adapter.py  base_schemas.py
app/integration/itunes/: adapter.py  schemas.py
app/services/: polling.py  queue.py  scheduller.py  schemas.py  storage.py
data/: storage.json
data/examples/: 1.json  2.json  389801252.json  415458524.json  595068606.json  640437525.json  sky-scanner.json
tests/: conftest.py  test_basic.py  test_integration.py  test_other.py  test_scheduller.py
